# lung_cancer_screening

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaksignore  .tool-versions  Dockerfile  Dockerfile.chainguard  Dockerfile.dev  Makefile  README.md  behave.ini  docker-compose.ci.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js
.azuredevops/pipelines/: delete-review-app.yml  deploy.yml  hub-infrastructure-dev.yaml  hub-infrastructure-live.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cicd-1-pull-request-closed.yaml  cicd-1-pull-request.yaml  cicd-2-main-branch.yaml  cicd-2-publish.yaml  stage-1-commit.yaml  (+8 more)
docs/: README.md
features/: age_when_started_smoking.feature  agree_terms_of_use.feature  asbestos_exposure.feature  cancer_diagnosis.feature  check_need_appointment.feature  confirmation.feature  cookies.feature  currently_smoking.feature  date_of_birth_page.feature  education.feature  environment.py  ethnicity.feature  family_history_lung_cancer.feature  gender.feature  have_you_ever_smoked_page.feature  height.feature  periods_when_you_stopped_smoking.feature  questionnaire.feature  relatives_age_when_diagnosed.feature  respiratory_conditions.feature  sex_at_birth.feature  smoked_amount.feature  smoked_total_years.feature  smoking_change.feature  smoking_current.feature  smoking_frequency.feature  smoking_history.feature  static.feature  types_tobacco_smoking.feature  weight.feature  when_you_quit_smoking.feature
lung_cancer_screening/: asgi.py  jinja2_env.py  settings.py  settings_test.py  urls.py  views.py  wsgi.py
makefiles/: dev.mk
scripts/: init.mk
(+583 files in other folders)
